// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading dynamic color 1`] = `
<h3
  class="sc-dkzDqf ZUHfw"
  color="deeppink"
  scale="300"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 1`] = `
<h3
  class="sc-dkzDqf kYJxzd"
  scale="100"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 2`] = `
<h3
  class="sc-dkzDqf jMsavG"
  scale="200"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 3`] = `
<h3
  class="sc-dkzDqf iuwndz"
  scale="300"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 4`] = `
<h3
  class="sc-dkzDqf bhORKI"
  scale="400"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 5`] = `
<h3
  class="sc-dkzDqf lfoNRx"
  scale="500"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 6`] = `
<h3
  class="sc-dkzDqf jSXqOa"
  scale="600"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 7`] = `
<h3
  class="sc-dkzDqf iBbDvT"
  scale="700"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 8`] = `
<h3
  class="sc-dkzDqf droMFc"
  scale="800"
>
  Heller UI
</h3>
`;

exports[`Heading h1 - h6 snapshots 1`] = `
<h1
  class="sc-bczRLJ xXLOD"
  scale="300"
>
  Heller UI
</h1>
`;

exports[`Heading h1 - h6 snapshots 2`] = `
<h2
  class="sc-gsnTZi gYSwjW"
  scale="300"
>
  Heller UI
</h2>
`;

exports[`Heading h1 - h6 snapshots 3`] = `
<h3
  class="sc-dkzDqf iuwndz"
  scale="300"
>
  Heller UI
</h3>
`;

exports[`Heading h1 - h6 snapshots 4`] = `
<h4
  class="sc-hKMtZM cYBxDb"
  scale="300"
>
  Heller UI
</h4>
`;

exports[`Heading h1 - h6 snapshots 5`] = `
<h5
  class="sc-eCYdqJ hXXkzS"
  scale="300"
>
  Heller UI
</h5>
`;

exports[`Heading h1 - h6 snapshots 6`] = `
<h6
  class="sc-jSMfEi fkEeuv"
  scale="300"
>
  Heller UI
</h6>
`;
